简单编写导入和导出功能